syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.zjhn";
option java_outer_classname = "UserServiceProto";

service SysUserService {
  rpc addUsers (AddRequest) returns (AddResponse) {}
}
// The response message containing the greetings
message AddRequest {
  int64 id = 1;

  string userName = 2;

  string name = 3;


}
// The response message containing the greetings
message AddResponse {

  int32 row = 1;

}